search page designed

--- a/src/1-ui/2-pages/1-Search/SearchForm/Search.module.css
+++ b/src/1-ui/2-pages/1-Search/SearchForm/Search.module.css
@@ -1,6 +1,5 @@
 .container{
-    height: 40vh;
-    min-height: 200px;
+    height: 200px;
     background-color: #ececec;
     display: flex;
     align-items: center;
