application design and functionality finished

--- a/src/1-ui/2-pages/2-Details/Details.module.css
+++ b/src/1-ui/2-pages/2-Details/Details.module.css
@@ -12,6 +12,16 @@
     padding-bottom: 20px;
 }
 
+.title{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.like {
+    margin-top: -10px;
+}
+
 .posterContainer img{
     width: 100%;
 }
